--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "aframe-layout-component",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Layout component for A-Frame.",
   "main": "index.js",
+  "browser": "dist/aframe-layout-component.min.js",
   "scripts": {
     "build": "browserify examples/main.js -o examples/build.js",
     "dev": "budo examples/main.js:build.js --dir examples --port 8005 --live --open",
